working - i got ast + field in every condition if its true or false after eval - need to add member and unary exp

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
 </table>
 <table class='dataTable' id="expsTable">
 </table>
+<br>
+<div id="output">
+    <span style="background-color: red;">redddd</span>
+    <span style="background-color: green;">greennnnnn</span>
+</div>
 
 <script src="dist/bundle.js"></script>
 </body>
