--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <table class='dataTable' id="expsTable">
 </table>
 <br>
-<div id="output">
+<pre id="output">
     <span style="background-color: red;">redddd</span>
     <span style="background-color: green;">greennnnnn</span>
-</div>
+</pre>
 
 <script src="dist/bundle.js"></script>
 </body>
