--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             width: 100%;
             height: 80vh;
         }
+        #varsPlaceholder{
+            width: 100%;
+        }
 
 
         textarea {
@@ -25,18 +28,7 @@
             width: 80%;
             height: 95%;
         }
-        .dataTable {
-            width: 80%;
-            column-width: auto;
-            align-content: right;
-            text-align: center;
-        }
 
-        .dataTable td {
-            border: 1px darkgray solid ;
-            padding:5px 15px;
-            border-collapse: collapse;
-        }
 
     </style>
 </head>
@@ -45,13 +37,10 @@
     <tr>
         <td>
             <div>
-                <label>Enter code here</label>
+                <h3>Enter code here:</h3>
             </div>
         </td>
         <td>
-            <div>
-                <label>Parsed code here</label>
-            </div>
         </td>
     </tr>
     <tr>
@@ -61,9 +50,11 @@
             </div>
         </td>
         <td>
-            <div class="textAreaWrapper">
-                <textarea id="parsedCode" title="Parse code"></textarea>
+            <div>
+                <h4>Enter parameters here:</h4> <p style="color: grey; font-size: smaller">example: "1,true,[1,2]"</p>
+                <textarea id="varsPlaceholder" title="Enter vars here"></textarea>
             </div>
+        </td>
         </td>
     </tr>
     <tr>
@@ -76,9 +67,8 @@
         </td>
     </tr>
 </table>
-<table class='dataTable' id="expsTable">
-</table>
 <br>
+<h3>Proccesed code here:</h3>
 <pre id="output">
     <span style="background-color: red;">redddd</span>
     <span style="background-color: green;">greennnnnn</span>
